--- a/grub_minimal.cfg
+++ b/grub_minimal.cfg
@@ -9,8 +9,15 @@ insmod configfile
 insmod fat
 insmod memdisk
 insmod part_gpt
+insmod all_video
+insmod jpeg
+insmod gfxterm
+insmod video_fb
+insmod gfxmenu
+insmod sleep
+insmod echo
 
-set timeout=10
-set default=0
 set root=(fd0,msdos1)
+set GRUB_TERMINAL_OUTPUT=gfxterm
+echo "Loading GRUB menu..."
 configfile /grub.cfg
