--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,7 +27,7 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v2
         with:
-          name: floppy.img
+          name: .floppy/floppy.img
           path: .
       - name: Create Release
         id: create_release
